--- a/testing_vote.ui
+++ b/testing_vote.ui
@@ -68,7 +68,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>halloween-pumpkin-with-hat-free-svg-file.png</pixmap>
+     <pixmap>pumpkin.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -87,7 +87,7 @@
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>221206-F-FD430-0009.PNG.png</pixmap>
+     <pixmap>tree.png</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -191,7 +191,7 @@
    <widget class="QPushButton" name="reset_button">
     <property name="geometry">
      <rect>
-      <x>0</x>
+      <x>10</x>
       <y>10</y>
       <width>131</width>
       <height>41</height>
