--- a/testing_vote.ui
+++ b/testing_vote.ui
@@ -49,20 +49,29 @@
      </font>
     </property>
     <property name="text">
-     <string>Voting Menu - Christmas or Halloween</string>
+     <string>Voting Menu - Select a Poll!</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="halloween_image">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>100</y>
+      <x>10</x>
+      <y>80</y>
       <width>171</width>
       <height>191</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
     </property>
     <property name="text">
      <string/>
@@ -73,12 +82,15 @@
     <property name="scaledContents">
      <bool>true</bool>
     </property>
+    <property name="textInteractionFlags">
+     <set>Qt::LinksAccessibleByMouse</set>
+    </property>
    </widget>
    <widget class="QLabel" name="christmas_image">
     <property name="geometry">
      <rect>
-      <x>440</x>
-      <y>90</y>
+      <x>300</x>
+      <y>60</y>
       <width>161</width>
       <height>211</height>
      </rect>
@@ -93,12 +105,12 @@
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="halloween_label">
+   <widget class="QLabel" name="left_label">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>310</y>
-      <width>111</width>
+      <x>60</x>
+      <y>280</y>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -108,15 +120,15 @@
      </font>
     </property>
     <property name="text">
-     <string>Halloween</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="vote_button">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>175</x>
       <y>440</y>
-      <width>131</width>
+      <width>91</width>
       <height>41</height>
      </rect>
     </property>
@@ -124,12 +136,12 @@
      <string>VOTE</string>
     </property>
    </widget>
-   <widget class="QLabel" name="christmas_label">
+   <widget class="QLabel" name="right_label">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>310</y>
-      <width>101</width>
+      <x>350</x>
+      <y>281</y>
+      <width>91</width>
       <height>21</height>
      </rect>
     </property>
@@ -139,14 +151,14 @@
      </font>
     </property>
     <property name="text">
-     <string>Christmas</string>
+     <string/>
     </property>
    </widget>
    <widget class="QLabel" name="or_label">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>310</y>
+      <x>210</x>
+      <y>280</y>
       <width>60</width>
       <height>21</height>
      </rect>
@@ -168,21 +180,31 @@
    <widget class="QLineEdit" name="user_input">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>440</y>
-      <width>191</width>
-      <height>41</height>
+      <x>15</x>
+      <y>450</y>
+      <width>151</width>
+      <height>21</height>
      </rect>
     </property>
-    <property name="placeholderText">
-     <string>Cast your vote here!</string>
+   </widget>
+   <widget class="QLabel" name="typebelow_label">
+    <property name="geometry">
+     <rect>
+      <x>15</x>
+      <y>420</y>
+      <width>91</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Type Below:</string>
     </property>
    </widget>
    <widget class="QPushButton" name="reset_button">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>440</y>
+      <x>10</x>
+      <y>10</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -202,8 +224,8 @@
    <widget class="QLabel" name="vote_message_label">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>350</y>
+      <x>140</x>
+      <y>370</y>
       <width>171</width>
       <height>61</height>
      </rect>
@@ -215,9 +237,9 @@
    <widget class="QPushButton" name="results_button">
     <property name="geometry">
      <rect>
-      <x>370</x>
+      <x>275</x>
       <y>440</y>
-      <width>131</width>
+      <width>151</width>
       <height>41</height>
      </rect>
     </property>
@@ -228,27 +250,148 @@
    <widget class="QLabel" name="results_label">
     <property name="geometry">
      <rect>
-      <x>380</x>
-      <y>330</y>
+      <x>430</x>
+      <y>320</y>
       <width>241</width>
-      <height>101</height>
+      <height>161</height>
      </rect>
     </property>
     <property name="text">
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="exception_label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>330</y>
+      <width>311</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="holiday_button">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>70</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Holidays</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="season_button">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>100</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Seasons</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="sun_image">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>90</y>
+      <width>191</width>
+      <height>181</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <weight>50</weight>
+      <bold>false</bold>
+     </font>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>sun.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+    <property name="textInteractionFlags">
+     <set>Qt::LinksAccessibleByMouse</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="snowman_image">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>60</y>
+      <width>181</width>
+      <height>211</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>snowman.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="poll_image">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>110</y>
+      <width>271</width>
+      <height>241</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>poll.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>50</y>
+      <width>121</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Select Below:</string>
+    </property>
+   </widget>
    <widget class="QLabel" name="instructions_label">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>190</y>
+      <x>480</x>
+      <y>160</y>
       <width>191</width>
       <height>91</height>
      </rect>
     </property>
     <property name="text">
-     <string>Vote for your favorite holiday! Type the name of the holiday you like the most and click the &quot;VOTE&quot; button to cast your vote.</string>
+     <string>Welcome to the voting menu! Select the options above and start voting!</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
@@ -264,18 +407,12 @@
      <x>0</x>
      <y>0</y>
      <width>680</width>
-     <height>21</height>
+     <height>24</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <tabstops>
-  <tabstop>user_input</tabstop>
-  <tabstop>vote_button</tabstop>
-  <tabstop>results_button</tabstop>
-  <tabstop>reset_button</tabstop>
- </tabstops>
  <resources/>
  <connections/>
 </ui>
