--- a/testing_vote.ui
+++ b/testing_vote.ui
@@ -407,12 +407,20 @@
      <x>0</x>
      <y>0</y>
      <width>680</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <tabstops>
+  <tabstop>season_button</tabstop>
+  <tabstop>holiday_button</tabstop>
+  <tabstop>user_input</tabstop>
+  <tabstop>vote_button</tabstop>
+  <tabstop>results_button</tabstop>
+  <tabstop>reset_button</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
