--- a/testing_vote.ui
+++ b/testing_vote.ui
@@ -323,7 +323,7 @@
     <property name="geometry">
      <rect>
       <x>100</x>
-      <y>100</y>
+      <y>-40</y>
       <width>271</width>
       <height>241</height>
      </rect>
@@ -382,6 +382,9 @@
     <property name="text">
      <string>Christmas</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">poll_items</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="halloween_button">
     <property name="geometry">
@@ -395,6 +398,9 @@
     <property name="text">
      <string>Halloween</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">poll_items</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="summer_button">
     <property name="geometry">
@@ -408,6 +414,9 @@
     <property name="text">
      <string>Summer</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">poll_items</string>
+    </attribute>
    </widget>
    <widget class="QRadioButton" name="winter_button">
     <property name="geometry">
@@ -421,6 +430,9 @@
     <property name="text">
      <string>Winter</string>
     </property>
+    <attribute name="buttonGroup">
+     <string notr="true">poll_items</string>
+    </attribute>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -447,5 +459,10 @@
  <connections/>
  <buttongroups>
   <buttongroup name="buttonGroup"/>
+  <buttongroup name="poll_items">
+   <property name="exclusive">
+    <bool>false</bool>
+   </property>
+  </buttongroup>
  </buttongroups>
 </ui>
